Fix extra title block on mobile

--- a/source/sass/blocks/extra.scss
+++ b/source/sass/blocks/extra.scss
@@ -46,8 +46,8 @@
 .extra__title-inner {
   position: relative;
   width: auto;
-  padding-right: 30px;
-  padding-left: 30px;
+  padding-right: 20px;
+  padding-left: 0;
   font-size: 24px;
   font-weight: 400;
 
@@ -63,7 +63,12 @@
   }
 
   &::before {
+    display: none;
     right: 100%;
+
+    @include md-size() {
+      display: block;
+    }
   }
   &::after {
     left: 100%;
